PRO-93: add create class